--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,9 @@
 <h1><%= @article.title %></h1>
 <p><%= @article.body %></p><br/>
+  <%= render partial: 'comments/form' %>
 <%= link_to " Back to Articles List", articles_path %><br/>
 <%= link_to "Delete", article_path(@article), method: :delete, data: {confirm: "Do you really want to delete this Article?"} %><br/>
 <%= link_to "Edit", edit_article_path(@article) %>
+
+<h3>Comments (<%= @article.comments.size %>)</h3>
+  <%= render partial: 'articles/comments', collection: @article.comments %>
