--- a/app/views/articles/_comments.html.erb
+++ b/app/views/articles/_comments.html.erb
@@ -1,5 +1,5 @@
 <div>
    <h5> Comment by <%= comments.author_name %></h5>
    <p class="comment"><%= comments.body %></p>
-   <p> Posted <%= distance_of_time_in_words( comments.article.created_at, comments.created_at) %> later </p>
+   <p> Posted <%= distance_of_time_in_words( comments.article.created_at, comments.created_at) %> ago </p>
 </div>
