--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,7 @@
-<h1>All Articles</h1>
+<div class="header_1">
+<h1>Welcome To The Bloggers App </h1>
+<h3>All Articles</h3>
+</div>
 
 <ul id="articles">
   <% @articles.each do |article| %>
@@ -8,4 +11,9 @@
   <% end %>
 </ul>
 
+<% if logged_in? %>
 <%= link_to "Create a New Article", new_article_path, class: "new_article" %>
+<% else %>
+  <%= link_to "Login", login_path, class: 'btn' %>
+  <%= link_to "Create an account", new_author_path, class: 'btn' %>
+<% end %>
