--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,3 +1,4 @@
 <h1>Create A new Article Here </h1>
 
 <%= render partial: 'form' %>
+<%= link_to "Return to article listings", articles_path, class: 'btn' %>
