--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,20 +1,33 @@
+<% if logged_in? %>
 <h1><%= @article.title %></h1>
-<p>
+<%if @article.image.exists? %>
+<p><%= image_tag @article.image.url %></p><br/>
+<% end %>
+<div><%= @article.body %></div><br/>
+
+<% if @article.tags.exists? %>
+<div class="tags">
 Tags:
 <% @article.tags.each do |tag| %>
 <%= link_to tag.name, tag_path(tag) %>
 <% end %>
-</p><br/>
-<p>
-<%if @article.image.exists? %>
-<%= image_tag @article.image.url(:medium) %><br/>
+</div><br/>
+
 <% end %>
-</p><br/>
-<p><%= @article.body %></p><br/>
-  <%= render partial: 'comments/form' %>
-<%= link_to " Back to Articles List", articles_path %><br/>
-<%= link_to "Delete", article_path(@article), method: :delete, data: {confirm: "Do you really want to delete this Article?"} %><br/>
-<%= link_to "Edit", edit_article_path(@article) %>
 
 <h3>Comments (<%= @article.comments.size %>)</h3>
+  <%= render partial: 'comments/form' %>
   <%= render partial: 'articles/comments', collection: @article.comments %>
+
+<div class="btns">
+<%= link_to " Back to Articles List", articles_path, class: 'btn' %><br/>
+<%= link_to "Delete", article_path(@article), method: :delete, data: {confirm: "Do you really want to delete this Article?"}, class: 'btn' %><br/>
+<%= link_to "Edit", edit_article_path(@article), class: 'btn' %>
+</div>
+
+ <% else %>
+ <h3> To see this article, you need to login </h3>
+ <%= link_to "Login", login_path, class: 'btn' %>
+ <%= link_to "Create an account", new_author_path, class: 'btn' %>
+
+  <% end %>
